--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "Mario <me@marioparaschiv.com> (github.com/marioparaschiv)",
 	"license": "Unlicensed",
 	"devDependencies": {
+		"@swc/cli": "^0.3.12",
 		"@swc/core": "^1.3.36"
 	},
 	"dependencies": {
